WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
148203
clearCode() should clear code
https://bugs.webkit.org/show_bug.cgi?id=148203
Summary
clearCode() should clear code
Geoffrey Garen
Reported
2015-08-19 16:52:55 PDT
clearCode() should clear code
Attachments
Patch
(6.39 KB, patch)
2015-08-19 16:55 PDT
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2015-08-19 16:55:25 PDT
Created
attachment 259429
[details]
Patch
Saam Barati
Comment 2
2015-08-19 17:00:29 PDT
Comment on
attachment 259429
[details]
Patch r=me
Geoffrey Garen
Comment 3
2015-08-19 18:18:51 PDT
Comment on
attachment 259429
[details]
Patch Clearing flags on attachment: 259429 Committed
r188675
: <
http://trac.webkit.org/changeset/188675
>
Geoffrey Garen
Comment 4
2015-08-19 18:18:54 PDT
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 5
2015-08-20 10:55:47 PDT
This change seems to have regressed the PLT on Mac by ~17%. Please fix or roll out ASAP.
Chris Dumez
Comment 6
2015-08-20 12:34:12 PDT
(In reply to
comment #5
)
> This change seems to have regressed the PLT on Mac by ~17%. Please fix or > roll out ASAP.
And looks like a ~3% PLT regression on iPad as well.
WebKit Commit Bot
Comment 7
2015-08-20 14:05:46 PDT
Re-opened since this is blocked by
bug 148244
Chris Dumez
Comment 8
2015-08-20 20:54:47 PDT
Thanks for rolling out, the PLT recovered.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug