clearCode() should clear code https://bugs.webkit.org/show_bug.cgi?id=148203

Reviewed by Saam Barati.

Clearing code used to require two steps: clearCode() and
clearUnlinkedCodeForRecompilation(). Unsurprisingly, clients sometimes
did one or the other or both without much rhyme or reason.

This patch simplifies things by merging both functions into clearCode().

* bytecode/UnlinkedFunctionExecutable.h:
* debugger/Debugger.cpp:
* heap/Heap.cpp:
(JSC::Heap::deleteAllCompiledCode):
(JSC::Heap::clearUnmarkedExecutables):
(JSC::Heap::deleteAllUnlinkedFunctionCode): Deleted. No need for this
function anymore since it was only used by clients who already called
clearCode() (and it would be terribly wrong to use without doing both.)

* heap/Heap.h:
(JSC::Heap::sizeAfterLastFullCollection):
* inspector/agents/InspectorRuntimeAgent.cpp:
(Inspector::TypeRecompiler::visit):
(Inspector::TypeRecompiler::operator()):
* runtime/Executable.cpp:
(JSC::FunctionExecutable::visitChildren):
(JSC::FunctionExecutable::clearCode):
(JSC::FunctionExecutable::clearUnlinkedCodeForRecompilation): Deleted.
* runtime/Executable.h:
* runtime/VM.cpp:
(JSC::VM::deleteAllCode):


Canonical link: https://commits.webkit.org/166329@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188675 268f45cc-cd09-0410-ab3c-d52691b4dbfc