Source/JavaScriptCore/inspector/agents/InspectorRuntimeAgent.cpp
@@ -316,7 +316,6 @@ public:
 
         FunctionExecutable* executable = jsCast<FunctionExecutable*>(cell);
         executable->clearCode();
-        executable->clearUnlinkedCodeForRecompilation();
     }
     inline IterationStatus operator()(JSCell* cell)
     {
