Source/JavaScriptCore/runtime/Executable.cpp
@@ -557,13 +557,9 @@ void FunctionExecutable::visitChildren(JSCell* cell, SlotVisitor& visitor)
     visitor.append(&thisObject->m_singletonFunction);
 }
 
-void FunctionExecutable::clearUnlinkedCodeForRecompilation()
-{
-    m_unlinkedExecutable->clearCodeForRecompilation();
-}
-
 void FunctionExecutable::clearCode()
 {
+    m_unlinkedExecutable->clearCode();
     m_codeBlockForCall = nullptr;
     m_codeBlockForConstruct = nullptr;
     Base::clearCode();
